src/test/deca/syntax/valid/homemade/lexer/test/test_lex_val_symbo_spe_in_comment.deca
/*je suis un commentaire {special}*/