src/test/deca/syntax/invalid/homemade/test/test_lex_inv_com_in_funct.deca
// Test commentaire dans un mot reservé
{
    prin/*test*/tln();
}